# whitleos-s

./: .dockerignore  .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  PROJECT_STRUCTURE.md  README.md  airules.md  architecture.md  docker-compose.yml  env.example  package-lock.json  package.json  plan.md  prd.md  requirements.txt  setup.bat  setup.sh  start.sh  stop.sh  tailwind.config.js  vercel.json
.github/workflows/: azure-rust-analytics.yml
api/: [...path].js
app/: alembic.ini  main.py
app/api/: schemas.py
legacy-python-app/alembic/: env.py
legacy-python-app/api/: auth.py
legacy-python-app/core/: security.py
legacy-python-app/db/: database.py  deps.py  models.py
mobile-expo/: .env.example  README.md  app.json  package-lock.json  package.json
public/: index.html
server/: index.js  lowdb.js
server/services/: localAnalyticsFallback.js  rustAnalyticsClient.js
services/rust-analytics/: .dockerignore  .env.example  Cargo.toml  Dockerfile  README.md
services/rust-analytics/src/: app_state.rs  config.rs  error.rs  etl.rs  main.rs  models.rs  repository.rs  routes.rs  service.rs
src/: App.js  firebase.js  index.css
src/app/: globals.css  layout.js  loading.js  page.js
src/components/: admin-view.jsx  animated-section.jsx  auth-form.jsx  brand-mark.jsx  contact-view.jsx  dashboard-view.jsx  journal-view.jsx  logout-button.jsx  meal-plan-view.jsx  preferences-form.jsx  progress-view.jsx  site-footer.jsx  site-header.jsx  steps-view.jsx  waitlist-form.jsx  workout-view.jsx  workspace-header.jsx
src/lib/: api.js  (+9 more)
tools/: analyze-and-push.ps1
(+80 files in other folders)
