[package]
name = "rust-analytics"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "=0.7.5", features = ["macros"] }
bson = "=2.8.1"
chrono = { version = "0.4", features = ["clock", "serde"] }
dotenvy = "0.15"
mongodb = "=2.8.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = "=0.3.36"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "time"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
url = "=2.4.1"
uuid = "=1.8.0"
